--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -85,15 +85,6 @@
 			<a href="what.html" class="hidden-xs hidden-sm">What is a taxable benefit</a>
 			<a href="what.html#gc-document-nav" class="visible-xs visible-sm">What is a taxable benefit</a>
       </li>
-<li>
-			<a href="what-share.html" class="hidden-xs hidden-sm">What is a shareholder benefit</a>
-			<a href="what-share.html#gc-document-nav" class="visible-xs visible-sm">What is a shareholder benefit</a>
-      </li>
-<li>
-			<a href="primary.html" class="hidden-xs hidden-sm">Guidance on who is the primary beneficiary of an expenditure: Employer or employee</a>
-			<a href="primary.html#gc-document-nav" class="visible-xs visible-sm">Guidance on who is the primary beneficiary of an expenditure: Employer or employee</a>
-      </li>
-
 
 	  <li>
       <a href="education.html" class="active" aria-current="page">Educational assistance</a>
@@ -103,8 +94,8 @@
 	<details class="p-0 brdr-0"><summary class="brdr-0 ">Other taxable benefits</summary>
 	<ul class="noline row">
  <li>
-			<a href="aircraft.html" class="hidden-xs hidden-sm">Aircraft - Operating expense benefits</a>
-			<a href="aircraft.html#gc-document-nav" class="visible-xs visible-sm">Aircraft - Operating expense benefits</a>
+			<a href="aircraft.html" class="hidden-xs hidden-sm">Aircraft benefits - Personal use of aircraft owned or leased by the employer</a>
+			<a href="aircraft.html#gc-document-nav" class="visible-xs visible-sm">Aircraft benefits - Personal use of aircraft owned or leased by the employer</a>
       </li>
 	  	   
   <li>
@@ -117,11 +108,26 @@
 			<a href="automobile.html#gc-document-nav" class="visible-xs visible-sm">Automobile provided by the employer</a>
       </li>
 		
-
-	  <li>
-			<a href="board-lodging-expenses.html" class="hidden-xs hidden-sm">Board and lodging expenses</a>
-			<a href="board-lodging-expenses.html#gc-document-nav" class="visible-xs visible-sm">Board and lodging expenses</a>
+  <li>
+			<a href="disability.html" class="hidden-xs hidden-sm">Benefits provided to an employee who has a severe or prolonged impairment (disability)</a>
+			<a href="disability.html#gc-document-nav" class="visible-xs visible-sm">Benefits provided to an employee who has a severe or prolonged impairment (disability)</a>
       </li>
+		
+	 <li>
+			<a href="remote.html" class="hidden-xs hidden-sm">Board, lodging and travel expenses - Provided to an employee in remote locations </a>
+			<a href="remote.html#gc-document-nav" class="visible-xs visible-sm">Board, lodging and travel expenses - Provided to an employee in remote locations </a>
+      </li>
+		
+	  <li>
+			<a href="board-lodging-expenses.html" class="hidden-xs hidden-sm">Board, lodging, housing and utilities expenses</a>
+			<a href="board-lodging-expenses.html#gc-document-nav" class="visible-xs visible-sm">Board, lodging, housing and utilities expenses</a>
+      </li>
+<li>
+			<a href="special-site.html" class="hidden-xs hidden-sm">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a>
+			<a href="special-site.html#gc-document-nav" class="visible-xs visible-sm">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a>
+      </li>
+	
+
 	   <li>
 			<a href="cell.html" class="hidden-xs hidden-sm">Cell phone and internet services</a>
 			<a href="cell.html#gc-document-nav" class="visible-xs visible-sm">Cell phone and internet services</a>
@@ -131,16 +137,18 @@
 			<a href="child-expenses.html" class="hidden-xs hidden-sm">Child care expenses</a>
 			<a href="child-expenses.html#gc-document-nav" class="visible-xs visible-sm">Child care expenses</a>
       </li>
+
+  <li>
+			<a href="retirement.html" class="hidden-xs hidden-sm">Contributions to savings and pension plans </a>
+			<a href="retirement.html#gc-document-nav" class="visible-xs visible-sm">Contributions to savings and pension plans </a>
+      </li>
+
 	  <li>
 			<a href="counselling.html" class="hidden-xs hidden-sm">Counselling services and tax preparation</a>
 			<a href="counselling.html#gc-document-nav" class="visible-xs visible-sm">Counselling services and tax preparation</a>
       </li>
-	  <li>
-			<a href="disability.html" class="hidden-xs hidden-sm">Disability-related employment benefits</a>
-			<a href="disability.html#gc-document-nav" class="visible-xs visible-sm">Disability-related employment benefits</a>
-      </li>
-		 
-		
+	
+				
 	 <li>
 			<a href="employee-plan.html" class="hidden-xs hidden-sm">Employee benefit plans</a>
 			<a href="employee-plan.html#gc-document-nav" class="visible-xs visible-sm">Employee benefit plans</a>
@@ -158,9 +166,14 @@
 			<a href="gifts.html" class="hidden-xs hidden-sm">Gifts, awards, and long-service awards</a>
 			<a href="gifts.html#gc-document-nav" class="visible-xs visible-sm">Gifts, awards, and long-service awards</a>
       </li>	
+
+<li>
+			<a href="clergy.html" class="hidden-xs hidden-sm">Housing and utilities expenses - Provided to a member of the clergy or of a religious order</a>
+			<a href="clergy.html#gc-document-nav" class="visible-xs visible-sm">Housing and utilities expenses - Provided to a member of the clergy or of a religious order</a>
+      </li>
 	   <li>
-			<a href="inssurance.html" class="hidden-xs hidden-sm">Insurance plans</a>
-			<a href="insurrance.html#gc-document-nav" class="visible-xs visible-sm">Insurance plans</a>
+			<a href="insurance.html" class="hidden-xs hidden-sm">Insurance plans</a>
+			<a href="insurance.html#gc-document-nav" class="visible-xs visible-sm">Insurance plans</a>
       </li>
 		
 	  
@@ -197,8 +210,8 @@
       </li>
 	 
 <li>
-			<a href="parking.html" class="hidden-xs hidden-sm">Parking </a>
-			<a href="parking.html#gc-document-nav" class="visible-xs visible-sm">Parking</a>
+			<a href="parking.html" class="hidden-xs hidden-sm">Parking expenses</a>
+			<a href="parking.html#gc-document-nav" class="visible-xs visible-sm">Parking expenses</a>
       </li>
 
   	
@@ -212,14 +225,10 @@
 			<a href="recreational.html#gc-document-nav" class="visible-xs visible-sm">Recreational facilities and club dues</a>
       </li>
 	 
+	
 	  <li>
-			<a href="retirement.html" class="hidden-xs hidden-sm">Savings and pension plans</a>
-			<a href="retirement.html#gc-document-nav" class="visible-xs visible-sm">Savings and pension plans</a>
-      </li>
-
-	  <li>
-			<a href="security.html" class="hidden-xs hidden-sm">Security options</a>
-			<a href="security.html#gc-document-nav" class="visible-xs visible-sm">Security options</a>
+			<a href="security.html" class="hidden-xs hidden-sm">Security (stock) options</a>
+			<a href="security.html#gc-document-nav" class="visible-xs visible-sm">Security (stock) options</a>
       </li>
 	  <li>
 			<a href="social.html" class="hidden-xs hidden-sm">Social events and hospitality functions</a>
@@ -242,15 +251,13 @@
 			<a href="travel-expenses.html" class="hidden-xs hidden-sm">Travel expenses </a>
 			<a href="travel-expenses.html#gc-document-nav" class="visible-xs visible-sm">Travel expenses </a>
       </li>
-<li>
-			<a href="prescribed.html" class="hidden-xs hidden-sm">Travel, board and lodging expenses - Provided to an employee in prescribed zones </a>
-			<a href="prescribed.html#gc-document-nav" class="visible-xs visible-sm">Travel, board and lodging expenses - Provided to an employee in prescribed zones </a>
-      </li>
 
-	  
+
+
+  
 	  <li>
-			<a href="uniform.html" class="hidden-xs hidden-sm">Uniforms and protective clothing</a>
-			<a href="uniform.html#gc-document-nav" class="visible-xs visible-sm">Uniforms and protective clothing</a>
+			<a href="uniforms.html" class="hidden-xs hidden-sm">Uniforms, protective clothing, safety and special clothing</a>
+			<a href="uniforms.html#gc-document-nav" class="visible-xs visible-sm">Uniforms, protective clothing, safety and special clothing</a>
       </li>
 <li>
 			<a href="zero-emission-vehicle.html" class="hidden-xs hidden-sm">Zero-emission vehicle - Charging stations and service plans</a>
