--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -308,19 +308,21 @@
 <p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform or protective clothing if <strong>one</strong> of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
+<div id="ajax-uniform">
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">Your employee must wear while carrying out the employment duties</li>
 <li class="cnjnctn-col">Your employee cannot wear the clothing for personal purposes, for example, outside of business hours</li>
-</ul>	</li>	
+</ul></div></li>	
 <li class="cnjnctn-col"><h4 class="text-muted">Protective clothing (including safety footwear and safety glasses)</h4> 
+<div id="ajax-protective">
 <p>It is designed to protect your employee from hazards associated with their employment</p>
-</li>
+</div></li>
 </ul>
 </details>
 
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if one of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col">You <strong> provide</strong> your employee with a <strong> distinctive uniform</strong> or <strong> protective clothing</strong> </li>
+<li class="cnjnctn-col">You <strong> provide</strong> your employee with a <a href="#uniform" aria-controls="centred-popup" class="wb-lbx" role="button">distinctive uniform&nbsp;<span class="far fa-question-circle"></span></a> or <a href="#protective" aria-controls="centred-popup" class="wb-lbx" role="button">protective clothing&nbsp;<span class="far fa-question-circle"></span></a></li>
 <li class="cnjnctn-col"><p>You provide an <strong>allowance</strong> to your employee for the cost of <strong>protective clothing</strong> and all of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Your employee used the allowance to purchase protective clothing</li>
@@ -395,6 +397,18 @@
 </dl>
 </div>
 </div>
+
+<section id="protective" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Protective clothing, safety and special clothing</h2>
+	</header>	<div class="modal-body">
+<p>Under the CRA's administrative policy, the benefit provided to your employee relates to protective clothing (including safety footwear and safety glasses) if: </p>		
+	<div data-ajax-replace="#ajax-protective"></div>
+	</div></section>
+
+<section id="uniform" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Distinctive uniform</h2>
+	</header>	<div class="modal-body">
+<p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform if both of the following apply: </p>		
+	<div data-ajax-replace="#ajax-uniform"></div>
+	</div></section>
 
 <section id="benefit" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a benefit</h2>
 	</header>	<div class="modal-body">		
