--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -303,23 +303,7 @@
 
 <h2 id="h_1">Determine if the benefit is taxable</h2>
 <p class="mrgn-bttm-lg">Generally, if you provide special clothing, an <a href="#allowance" aria-controls="centred-popup" class="wb-lbx" role="button">allowance&nbsp;<span class="far fa-question-circle"></span></a> or you <a href="#reimbursement" aria-controls="centred-popup" class="wb-lbx" role="button">reimburse&nbsp;<span class="far fa-question-circle"></span></a> for special clothing to your employee, the benefit is taxable. Depending on your situation, the benefit may not be taxable under the <a href="#adminpolicy" aria-controls="centred-popup" class="wb-lbx" role="button">CRA's administrative policy&nbsp;<span class="far fa-question-circle"></span></a>.</p>	
-
-<details><summary>What is considered a distinctive uniform or protective clothing (including safety footwear and safety glasses)</summary>
-<p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform or protective clothing if <strong>one</strong> of the following apply:</p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
-<div id="ajax-uniform">
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col">Your employee must wear while carrying out the employment duties</li>
-<li class="cnjnctn-col">Your employee cannot wear the clothing for personal purposes, for example, outside of business hours</li>
-</ul></div></li>	
-<li class="cnjnctn-col"><h4 class="text-muted">Protective clothing (including safety footwear and safety glasses)</h4> 
-<div id="ajax-protective">
-<p>It is designed to protect your employee from hazards associated with their employment</p>
-</div></li>
-</ul>
-</details>
-
+<h4>Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, the benefit is <strong>not </strong>taxable if one of the following apply:</p>
 <ul class="list-unstyled cnjnctn-type-or">
 <li class="cnjnctn-col">You <strong> provide</strong> your employee with a <a href="#uniform" aria-controls="centred-popup" class="wb-lbx" role="button">distinctive uniform&nbsp;<span class="far fa-question-circle"></span></a> or <a href="#protective" aria-controls="centred-popup" class="wb-lbx" role="button">protective clothing&nbsp;<span class="far fa-question-circle"></span></a></li>
@@ -340,6 +324,23 @@
 <li class="cnjnctn-col">You <strong>reimburse</strong> your employee for services related to <strong>laundry or dry cleaning</strong> to clean a <strong> distinctive uniform</strong> or <strong> protective clothing</strong> and you received a copy of the receipts from your employee to confirm the amount paid</li>
 </ul>
 
+<details><summary>What is considered a distinctive uniform or protective clothing (including safety footwear and safety glasses)</summary>
+<p>Under the CRA's administrative policy, the benefit provided to your employee relates to a distinctive uniform or protective clothing if <strong>one</strong> of the following apply:</p>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4 class="text-muted">Distinctive uniform</h4> 
+<div id="ajax-uniform">
+<ul class="list-unstyled cnjnctn-type-and">
+<li class="cnjnctn-col">Your employee must wear while carrying out the employment duties</li>
+<li class="cnjnctn-col">Your employee cannot wear the clothing for personal purposes, for example, outside of business hours</li>
+</ul></div></li>	
+<li class="cnjnctn-col"><h4 class="text-muted">Protective clothing (including safety footwear and safety glasses)</h4> 
+<div id="ajax-protective">
+<p>It is designed to protect your employee from hazards associated with their employment</p>
+</div></li>
+</ul>
+</details>
+<h4>Taxable situation</h4>
+<p>If the benefit <strong>does not meet all of the conditions above</strong>, the benefit is <strong>taxable</strong>.</p>
 
 <h2 id="h_2">Calculate the value of the benefit</h2>
 <p><strong>If the benefit is taxable</strong>, the value of the benefit is equal to:</p>
