--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -401,7 +401,7 @@
 
 <section id="protective" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Protective clothing, safety and special clothing</h2>
 	</header>	<div class="modal-body">
-<p>Under the CRA's administrative policy, the benefit provided to your employee relates to protective clothing (including safety footwear and safety glasses) if: </p>		
+<p>Under the CRA's administrative policy, the benefit provided to your employee relates to protective clothing (including safety footwear and safety glasses) if the following apply: </p>		
 	<div data-ajax-replace="#ajax-protective"></div>
 	</div></section>
 
