--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -319,7 +319,7 @@
 <li class="cnjnctn-col">Your employee is required by law to wear it on the work site</li>
 <li class="cnjnctn-col">You can justify your position regarding the cost being reasonable</li>
 </ul></li>
-<li class="cnjnctn-col">You <strong>pay</strong> or provide a <strong>reasonable allowance</strong> for services related to <strong>laundry or dry cleaning</strong> to your employee to clean a <strong> distinctive uniform</strong> or <strong> protective clothing</strong></li>
+<li class="cnjnctn-col">You <strong>pay</strong> or provide a <strong>reasonable allowance</strong> to your employee for services related to <strong>laundry or dry cleaning</strong> to clean a <strong> distinctive uniform</strong> or <strong> protective clothing</strong></li>
 
 <li class="cnjnctn-col">You <strong>reimburse</strong> your employee for services related to <strong>laundry or dry cleaning</strong> to clean a <strong> distinctive uniform</strong> or <strong> protective clothing</strong> and you received a copy of the receipts from your employee to confirm the amount paid</li>
 </ul>
