--- a/payroll/calculate/benefit/uniforms.html
+++ b/payroll/calculate/benefit/uniforms.html
@@ -340,7 +340,7 @@
 </ul>
 </details>
 <h4>Taxable situation</h4>
-<p>If the benefit <strong>does not meet all of the conditions above</strong>, the benefit is <strong>taxable</strong>.</p>
+<p>If the benefit <strong>does not</strong> meet <strong>one</strong> of the conditions above, the benefit is <strong>taxable</strong>.</p>
 
 <h2 id="h_2">Calculate the value of the benefit</h2>
 <p><strong>If the benefit is taxable</strong>, the value of the benefit is equal to:</p>
