--- a/payroll/calculate/benefit/vehicle-allowance.html
+++ b/payroll/calculate/benefit/vehicle-allowance.html
@@ -386,10 +386,10 @@
 <li><h3 id="step4">Determine if special considerations apply to the benefit</h3>
 <p>The benefit may not be taxable if the benefit paid to your employee for the use of their vehicle in the course of their employment duties is done in <strong>one</strong> of the following special situations:</p>
 
-<ul>
-<li><a href="remote.html">Your employee works in remote locations</a> </li>
-<li><a href="special-site.html">Your employee works at special work sites, including prescribed zones</a> </li>
-<li><a href="disability.html">Your employee has a severe or prolonged impairment</a> </li>
+<ul class="list-unstyled cnjnctn-type-or">
+ <li class="cnjnctn-col"> <a href="remote.html">Your employee works in remote locations</a> </li>
+ <li class="cnjnctn-col"> <a href="special-site.html">Your employee works at special work sites, including prescribed zones</a> </li>
+ <li class="cnjnctn-col"> <a href="disability.html">Your employee has a severe or prolonged impairment</a> </li>
 </ul>
 <hr>	
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
