--- a/payroll/calculate/payment/index.html
+++ b/payroll/calculate/payment/index.html
@@ -231,7 +231,7 @@
                         </tr>
                        
 		 <tr>
-                           <td><a href="research-grants.html">Payments related to research grants</a> </td>
+                           <td><a href="research-grants.html">Payments related to research grants and post-doctoral fellows</a> </td>
                            <td>Type of remuneration </td>
                         </tr>
 
