--- a/payroll/calculate/payment/research-grants.html
+++ b/payroll/calculate/payment/research-grants.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Payments related to research grants - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Payments related to research grants and post-doctoral fellows - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -93,7 +93,7 @@
       </li>
 
  <li>
-	 <a href="research-grants.html" class="active" aria-current="page">Payments related to research grants</a>
+	 <a href="research-grants.html" class="active" aria-current="page">Payments related to research grants and post-doctoral fellows</a>
 	</li>
  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -280,7 +280,7 @@ i><a href="truck-drivers.html" class="hidden-xs hidden-sm">Payments to truck dri
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Payments related to research grants</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Payments related to research grants and post-doctoral fellows</h1>
 <p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/research-grants.html">Research grants</a> </p>
 <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong> <a href="https://test.canada.ca/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p>
 		  
