--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -332,7 +332,7 @@
 </details>
 
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h3>Benefit provided to your current, former or future employee</h3>
+<li class="cnjnctn-col"><h3 id="employee">Benefit provided to your current, former or future employee</h3>
 <details><summary>Situation: You provide or reimburse for courses, programs, or training to your <strong>current or former employee</strong></summary>
 <h4 id="current">Non-taxable situation</h4>
 <p>Under the CRA's administrative policy, if you provide or reimburse for a course, a program, or training to your current or former employee, the benefit is <strong>not </strong>taxable if <strong>all</strong> of the following apply:</p>
@@ -392,7 +392,7 @@
 </li>
 <li class="cnjnctn-col">
 
-<h3>Benefit provided to your employee's family members</h3>
+<h3 id="family">Benefit provided to your employee's family members</h3>
 <details><summary>Situation: You provide <strong>free tuition or reduced tuition fees</strong> to your employee’s family members</summary>
 <h4>Non-taxable situation</h4>
 <p>If you provide free  tuition or reduced tuition fees to your employee’s family member, the benefit is <strong>not </strong>taxable to the employee if <strong>all</strong> of the following apply:</p>
