--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -246,7 +246,7 @@
                            <td> Personal and family needs</td>
                         </tr>
                         <tr>
-                           <td> <a href="education.html">Educational assistance</a> <span class="label label-info">CVB - SME reviewing</span>
+                           <td> <a href="education.html">Educational assistance</a> <span class="label label-warning">With ABSB</span>
 				
 				<p>Includes:</p> 
 						   <ul>
@@ -370,7 +370,7 @@
                            <td>Work-related expenses</td>
                         </tr>
 			         <tr>
-                           <td> <a href="uniforms.html">Uniforms, protective clothing, safety and special clothing</a> <span class="label label-info">CVB - SME reviewing</span></td>
+                           <td> <a href="uniforms.html">Uniforms, protective clothing, safety and special clothing</a> <span class="label label-warning">With ABSB</span></td>
                            <td>Work-related expenses</td>
                         </tr>
                      
