--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -138,7 +138,7 @@
                            <td>Travel</td>
                         </tr>
 <tr>
-                           <td><a href="zero-emission-vehicle.html">Zero-emission vehicle - Charging stations and service plans</a> <span class="label label-danger">NEW - Research and analysis</span>
+                           <td><a href="zero-emission-vehicle.html">Zero-emission vehicle - Charging stations and service plans</a> <span class="label label-danger">CVB NEW - Research and analysis</span>
 			  </td>
                            <td>Travel</td>
                         </tr>
