--- a/payroll/calculate/payment/research-grants.html
+++ b/payroll/calculate/payment/research-grants.html
@@ -289,6 +289,14 @@ i><a href="truck-drivers.html" class="hidden-xs hidden-sm">Payments to truck dri
 </div>
 <p>You may provide XXX payments to your employee for salary, wages or commissions that they are expected to earn in their employment with you (for example, to perform future services). Generally, you make payroll deductions on XXX payments.</p>
 
+<details><summary>What is a research grant or a fellowship</summary>
+<h4>Research grants</h4>
+<p>Research Grants are sums of money provided to an individual for the payment of expenses necessary to conduct a research project. The grant may include personal or living expenses. The grant may also include an element of remuneration to the recipient.  Funds originating from various sources may be paid to and administered by a college, university, hospital, or similar institution where the researcher is employed. However, only that part of the grant paid to, or otherwise available for, the researcher is considered to be a research grant.</p>
+<h4>Fellowship</h4>
+<p>The term fellowship is not defined in the Income Tax Act. Generally, a fellowship is an amount paid or benefits given for the purpose of advancing a person’s education. It is similar to a scholarship or a bursary, with the difference being that a fellowship is generally awarded to a graduate student by a university, charity, or similar body for doctoral studies or post-doctoral work.</p>
+<p>Learn more about scholarships and bursaries: <a href="https://test.canada.ca/cra-arc/payroll/calculate/benefit/education.html#scholarship">Educational assistance</a></p>
+</details>
+
 <h2 class="h3">On this page</h2>
   	
 <ul>
