--- a/payroll/calculate/payment/research-grants.html
+++ b/payroll/calculate/payment/research-grants.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Payments related to research grants and post-doctoral fellows - Calculate payroll deductions and contributions - Canada.ca</title>
+         <title>Payments related to research grants and post-doctoral fellowships - Calculate payroll deductions and contributions - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -93,7 +93,7 @@
       </li>
 
  <li>
-	 <a href="research-grants.html" class="active" aria-current="page">Payments related to research grants and post-doctoral fellows</a>
+	 <a href="research-grants.html" class="active" aria-current="page">Payments related to research grants and post-doctoral fellowships</a>
 	</li>
  <li class="p-0">
 	<hr class="brdr-bttm mrgn-tp-0">
@@ -280,7 +280,7 @@ i><a href="truck-drivers.html" class="hidden-xs hidden-sm">Payments to truck dri
   </ul>
 </nav>
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Payments related to research grants and post-doctoral fellows</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Payments related to research grants and post-doctoral fellowships</h1>
 <p>Content to be covered: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-payments/research-grants.html">Research grants</a> </p>
 <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong> <a href="https://test.canada.ca/cra-arc/payroll/calculate/benefit/education.html">Educational assistance</a></p>
 		  
@@ -289,8 +289,8 @@ i><a href="truck-drivers.html" class="hidden-xs hidden-sm">Payments to truck dri
 </div>
 <p>You may provide XXX payments to your employee for salary, wages or commissions that they are expected to earn in their employment with you (for example, to perform future services). Generally, you make payroll deductions on XXX payments.</p>
 
-<details><summary>What is a research grant or a fellowship</summary>
-<h4>Research grants</h4>
+<details><summary>What is a research grant or a post-doctoral fellowship</summary>
+<h4 id="research">Research grants</h4>
 <p>Research Grants are sums of money provided to an individual for the payment of expenses necessary to conduct a research project. The grant may include personal or living expenses. The grant may also include an element of remuneration to the recipient.  Funds originating from various sources may be paid to and administered by a college, university, hospital, or similar institution where the researcher is employed. However, only that part of the grant paid to, or otherwise available for, the researcher is considered to be a research grant.</p>
 <h4>Fellowship</h4>
 <p>The term fellowship is not defined in the Income Tax Act. Generally, a fellowship is an amount paid or benefits given for the purpose of advancing a person’s education. It is similar to a scholarship or a bursary, with the difference being that a fellowship is generally awarded to a graduate student by a university, charity, or similar body for doctoral studies or post-doctoral work.</p>
