--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -324,7 +324,7 @@
 
 <details><summary>What is a scholarship or a bursary</summary>
 <p>Scholarships and bursaries are amounts awarded to students, or on their behalf, to enable them to pursue their education. They are not defined in the Income Tax Act, but the meaning of <strong>bursary</strong> is broad enough to include almost any form of financial assistance to enable a student to pursue their education.  They can include amounts paid to defray living expenses, as well as amounts that are directly related to tuition fees. They usually apply to studies at the postsecondary level or beyond, intended to obtain a university degree, a diploma or a certificate. However, there are circumstances under which they are awarded for education below the postsecondary school level. Normally, a student is not expected to do specific work for the payer in exchange for a scholarship or bursary.</p>
-<p>Learn more about research grants and post-doctoral fellows: <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/research-grants.html#research">Payments related to research grants and post-doctoral fellows</a></p>
+<p>Learn more about research grants and post-doctoral fellowships: <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/research-grants.html#research">Payments related to research grants and post-doctoral fellowships</a></p>
 </details>
 
 <ul class="list-unstyled cnjnctn-type-or">
