--- a/payroll/calculate/payment/template-payment.html
+++ b/payroll/calculate/payment/template-payment.html
@@ -183,9 +183,9 @@
 <a href="pension.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to pension or superannuation
 </a></li>
 	
-<li><a href="research-grants.html" class="hidden-xs hidden-sm"> Payments related to research grants and post-doctoral fellows
+<li><a href="research-grants.html" class="hidden-xs hidden-sm"> Payments related to research grants and post-doctoral fellowships
  </a>
-<a href="research-grants.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to research grants and post-doctoral fellows
+<a href="research-grants.html#gc-document-nav" class="visible-xs visible-sm"> Payments related to research grants and post-doctoral fellowships
 </a></li>
 
 <li><a href="deferral.html" class="hidden-xs hidden-sm"> Payments related to salary deferral arrangements
