--- a/payroll/calculate/payment/research-grants.html
+++ b/payroll/calculate/payment/research-grants.html
@@ -358,6 +358,7 @@ i><a href="truck-drivers.html" class="hidden-xs hidden-sm">Payments to truck dri
                          <li><span class="fas fa-check fa-li fa-lg text-success"></span> Withhold CPP, EI or income tax deductions</li>
  		         <li><span class="fas fa-check fa-li fa-lg text-success"></span> Report on a T4A slip the:
 				<ul><li>Code 104 - Research grants</li>
+					  <li>Code 210 - Postdoctoral fellowship income</li>
 				    
  				  </ul></li>
                          
