--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -552,7 +552,8 @@
   </details>
 
 <h2 id="h_3">Withhold payroll deductions and remit GST/HST</h2>
-<p>You must withhold the following deductions depending on who the <strong>payment is made</strong> to: </p>
+<p><strong>Do not</strong> withhold deductions if the recipient of the educational assistance is a <strong>future</strong> employee or if you are required to report the benefit on a slip for the <strong>family member</strong> of one of your employees.</p>
+<h3>Educational assistance provided to your current or former employee</h3>
 
   <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold.txt"></div></p>
 
