--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -292,7 +292,7 @@
  <div class="alert alert-info">
 <p>Content has been updated for clarity, completeness and plain language. <strong>No changes were made to the current CRA administrative policy. </strong></p>
 </div>
-<p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong> <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/research-grants.html">Payments related to research grants and post-doctoral fellows</a></p>
+<p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong> <a href="https://test.canada.ca/cra-arc/payroll/calculate/payment/research-grants.html">Payments related to research grants and post-doctoral fellowships</a></p>
 
 <p>You may provide educational assistance to your employee, a former employee or an employee's family member. </p>
 
