--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -552,7 +552,12 @@
   </details>
 
 <h2 id="h_3">Withhold payroll deductions and remit GST/HST</h2>
-<p><strong>Do not</strong> withhold deductions if the recipient of the educational assistance is a <strong>future</strong> employee or if you are required to report the benefit on a slip for the <strong>family member</strong> of one of your employees.</p>
+<p><strong>Do not</strong> withhold deductions if <strong>one</strong> of the following applies:</p>
+<ul class="list-unstyled cnjnctn-type-or">
+  <li class="cnjnctn-col">The recipient of the educational assistance is a <strong>future</strong> employee </li>
+  <li class="cnjnctn-col">You are required to report the benefit on a slip for the <strong>family member</strong> of your employee</li>
+</ul>
+
 <h3>Educational assistance provided to your current or former employee</h3>
 
   <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/withhold.txt"></div></p>
