--- a/payroll/calculate/benefit/education.html
+++ b/payroll/calculate/benefit/education.html
@@ -554,7 +554,7 @@
 <h2 id="h_3">Withhold payroll deductions and remit GST/HST</h2>
 <p><strong>Do not</strong> withhold deductions if <strong>one</strong> of the following applies:</p>
 <ul class="list-unstyled cnjnctn-type-or">
-  <li class="cnjnctn-col">The recipient of the educational assistance is a <strong>future</strong> employee </li>
+  <li class="cnjnctn-col">The recipient of the benefit is a <strong>future</strong> employee </li>
   <li class="cnjnctn-col">You are required to report the benefit on a slip for the <strong>family member</strong> of your employee</li>
 </ul>
 
