--- a/payroll/calculate/benefit/travel-expenses.html
+++ b/payroll/calculate/benefit/travel-expenses.html
@@ -303,10 +303,10 @@
 <div id="ajax-special">
 <p>The benefit may not be taxable if your employee is in <strong>one</strong> of the following special situations:</p>
 
-<ul>
-<li><a href="remote.html">Your employee works in a remote location</a> </li>
-<li><a href="special-site.html">Your employee works at a special work site, including in a prescribed zone</a> </li>
-<li><a href="disability.html">Your employee has a severe or prolonged impairment</a> </li>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><a href="remote.html">Your employee works in a remote location</a> </li>
+<li class="cnjnctn-col"><a href="special-site.html">Your employee works at a special work site, including in a prescribed zone</a> </li>
+<li class="cnjnctn-col"><a href="disability.html">Your employee has a severe or prolonged impairment</a> </li>
 </ul>
 </div>
 <hr>
