--- a/payroll/calculate/benefit/board-lodging-expenses.html
+++ b/payroll/calculate/benefit/board-lodging-expenses.html
@@ -301,10 +301,10 @@
 <li> <h3 id="steps">Determine if the benefit is considered in a special situation </h3>
  
 <p>The benefit may not be taxable if you provide to your employee is in <strong>one</strong> of the following special situations:</p>
-<ul>
-<li>Board and lodging: <a href="remote.html">Your employee works in a remote location</a> </li>
-<li>Board and lodging: <a href="special-site.html">Your employee works at a special work site, including in a prescribed zone</a> </li>
-<li>Housing: <a href="clergy.html">Your employee is a member of the clergy or of a religious order</a> </li>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">Board and lodging: <a href="remote.html">Your employee works in a remote location</a> </li>
+<li class="cnjnctn-col">Board and lodging: <a href="special-site.html">Your employee works at a special work site, including in a prescribed zone</a> </li>
+<li class="cnjnctn-col">Housing: <a href="clergy.html">Your employee is a member of the clergy or of a religious order</a> </li>
 </ul>
 
 <hr>
