--- a/payroll/calculate/benefit/clergy.html
+++ b/payroll/calculate/benefit/clergy.html
@@ -301,9 +301,9 @@
  <div id="ajax-special">
 <p>The benefit may not be taxable if your employee is in <strong>one</strong> of the following special situations:</p>
 
-<ul>
-<li><a href="remote.html">Your employee is working in a remote location</a> </li>
-<li><a href="special-site.html">Your employee works at a special work site, including in a presribed zone</a>  </li>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"><a href="remote.html">Your employee is working in a remote location</a> </li>
+<li class="cnjnctn-col"><a href="special-site.html">Your employee works at a special work site, including in a presribed zone</a>  </li>
 </ul>
 </div>
 
