--- a/payroll/calculate/benefit/special-site.html
+++ b/payroll/calculate/benefit/special-site.html
@@ -294,9 +294,9 @@
 
 <div id="ajax-special">
 <p>The benefit may not be taxable if you provide to your employee is in <strong>one</strong> of the following special situations:</p>
-<ul>
-<li>Board and lodging: <a href="special-site.html">Your employee is working in a remote location</a> </li>
-<li>Housing: <a href="clergy.html">Your employee is a member of the clergy or of a religious order</a> </li>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col">Board and lodging: <a href="special-site.html">Your employee is working in a remote location</a> </li>
+<li class="cnjnctn-col">Housing: <a href="clergy.html">Your employee is a member of the clergy or of a religious order</a> </li>
 </ul>
 
 <p  class="mrgn-tp-lg">It is possible for an employee to work at a location that is both a special work site and a remote work location. However, the benefit can only be excluded from the employee's income <strong>once</strong>.</p>
