--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -110,7 +110,7 @@
 <p>Depending if the worker is an <strong>employee</strong>, <strong>self-employed</strong> or an <strong>incorporated employee</strong> the tax obligations may be different.</p>
 </div>
 <div id="ajax-info2">
-<p>The incorporated employee and the payer have different tax obligations because the incorporated employee <strong>performs the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB).</p>
+<p>The incorporated employee and the payer have different tax obligations because the incorporated employee <strong>performs the services on behalf of their own corporation</strong>. An incorporated employee in this situation is considered a personal services business (PSB) for income tax purposes.</p>
 </div>
 <p>To understand the tax obligations, continue to one of the following depending on the type of relationship:</p>
 
