--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -162,11 +162,13 @@
 
 
 <h2 id="1c">Payroll and GST/HST tax obligations for employees of the PSB</h2>
-<p>The PSB payroll and GST/HST tax obligations for employees of the PSB are the same as regular corporations.</p>
+<p>The PSB payroll and GST/HST (including Fuel charge if the PSB is a road carrier) tax obligations for employees of the PSB are the same as regular corporations.</p>
 
 <p>Learn more: </p>
 <ul><li><a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>
+
 </ul>
  </details>
 
