--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -260,6 +260,12 @@
 <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/programs/about-canada-revenue-agency-cra/voluntary-disclosures-program-overview.html?utm_campaign=not-applicable&amp;utm_medium=vanity-url&amp;utm_source=canada-ca_taxes-voluntary-disclosures">Voluntary Disclosures Program &ndash; Introduction</a></p>
 
 <h2 id="h_4">Consequences of non-compliance</h2>
+<p>When non-compliance is identified, the CRA:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">Educates the individual on their tax obligations</li>
+<li class="cnjnctn-col">Ensures the correct returns are prepared and filed</li>
+<li class="cnjnctn-col">Takes the necessary enforcement actions to ensure compliance with the law</li>
+</ul>
 <p>Depending on the situation, penalties may be assessed. If individuals do not pay an amount that is due, the CRA may apply interest from the day the payment was due. </p>
 
 <p>Learn more:</p>
