--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -173,11 +173,13 @@
 
 
 <h2 id="1d">Payroll and GST/HST tax obligations for employees of the self-employed worker</h2>
-<p>The self-employed worker payroll and GST/HST tax obligations for employees of the self-employed worker are the same as regular employers.</p>
+<p>The self-employed worker payroll and GST/HST (including Fuel charge if the PSB is a road carrier) tax obligations for employees of the self-employed worker are the same as regular employers.</p>
 
 <p>Learn more: </p>
 <ul><li><a href="https://test.canada.ca/cra-arc/payroll/guidance/tax-obligations-employee.html">Employee and employer relationship</a></li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/excise-taxes-duties-levies/fuel-charge.html">Fuel charge</a></li>
+
 </ul>
 
 
